feat: add created_by to club model
