# http/gen/api_spec.yaml
@@ -179,3 +179,7 @@ components:
           type: string
         description:
           type: string
+        created_by_id:
+          type: string
+        created_by_full_name:
+          type: string
