# http/http.go
@@ -28,18 +28,27 @@ func (h *Http) GetAllClubs(c *fiber.Ctx) error {
 }
 
 func (h *Http) CreateClub(c *fiber.Ctx) error {
+	user, err := auth_util.GetUserFromFiberContext(c)
+	if err != nil {
+		fmt.Println(err)
+		return c.Status(fiber.StatusBadGateway).JSON(fiber.Map{"error": "invalid authentication"})
+	}
+
 	var club api_gen.CreateClubJSONRequestBody
 	if err := c.BodyParser(&club); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "invalid request body"})
 	}
 
 	newClub, err := h.app.CreateClub(context.Background(), model.Club{
-		Name:        club.Name,
-		Description: club.Description,
+		Name:              club.Name,
+		Description:       club.Description,
+		CreatedByID:       user.Id,
+		CreatedByFullName: user.FullName,
 	})
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
 	}
+
 	return c.Status(fiber.StatusCreated).JSON(newClub)
 }
 
@@ -52,11 +61,13 @@ func (h *Http) SearchClubs(c *fiber.Ctx, params api_gen.SearchClubsParams) error
 }
 
 func (h *Http) GetJoinedClub(c *fiber.Ctx) error {
-	userId, err := auth_util.GetUserIdFromFiberContext(c)
+	user, err := auth_util.GetUserFromFiberContext(c)
 	if err != nil {
 		fmt.Println(err)
 		return c.Status(fiber.StatusBadGateway).JSON(fiber.Map{"error": "invalid authentication"})
 	}
+
+	userId := user.Id
 
 	clubs, err := h.app.GetJoinedClub(context.Background(), userId)
 	if err != nil {
@@ -82,11 +93,13 @@ func (h *Http) IsBelongToClub(c *fiber.Ctx, clubId string, params api_gen.IsBelo
 }
 
 func (h *Http) JoinClub(c *fiber.Ctx, clubId string) error {
-	userId, err := auth_util.GetUserIdFromFiberContext(c)
+	user, err := auth_util.GetUserFromFiberContext(c)
 	if err != nil {
 		fmt.Println(err)
 		return c.Status(fiber.StatusBadGateway).JSON(fiber.Map{"error": "invalid authentication"})
 	}
+
+	userId := user.Id
 
 	err = h.app.JoinClub(context.Background(), clubId, userId)
 	if err != nil {
@@ -96,11 +109,13 @@ func (h *Http) JoinClub(c *fiber.Ctx, clubId string) error {
 }
 
 func (h *Http) LeaveClub(c *fiber.Ctx, clubId string) error {
-	userId, err := auth_util.GetUserIdFromFiberContext(c)
+	user, err := auth_util.GetUserFromFiberContext(c)
 	if err != nil {
 		fmt.Println(err)
 		return c.Status(fiber.StatusBadGateway).JSON(fiber.Map{"error": "invalid authentication"})
 	}
+
+	userId := user.Id
 
 	err = h.app.LeaveClub(context.Background(), clubId, userId)
 	if err != nil {
@@ -113,7 +128,7 @@ func (h *Http) GetHealthService(c *fiber.Ctx) error {
 	serviceStatus := "Service is running"
 
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{
-		"service":  serviceStatus,
+		"service": serviceStatus,
 	})
 }
 
